Add tcp / nats impl. Rework macro to remove warning

--- a/test/test_cpp/CMakeLists.txt
+++ b/test/test_cpp/CMakeLists.txt
@@ -39,11 +39,23 @@ add_executable(uuid_tests "uuid_tests.cpp")
 # Client without TLS tests
 add_executable(client_no_tls_tests "client_no_tls_tests.cpp")
 
+# Client TCP tests
+add_executable(client_tcp_tests "client_tcp_tests.cpp")
+
 # Client with TLS tests
 add_executable(client_tls_tests "client_tls_tests.cpp")
 
 # Server without TLS test
 add_executable(server_no_tls_test "server_no_tls_test.cpp")
+
+# Server TCP test
+add_executable(server_tcp_test "server_tcp_test.cpp")
+
+# Client TCP TLS tests
+add_executable(client_tcp_tls_tests "client_tcp_tls_tests.cpp")
+
+# Server TCP TLS test
+add_executable(server_tcp_tls_test "server_tcp_tls_test.cpp")
 
 # Macro test
 add_executable(macro_test "macro_test.cpp")
@@ -51,3 +63,7 @@ add_executable(macro_test "macro_test.cpp")
 # Link with libs
 target_link_libraries(client_tls_tests OpenSSL::SSL OpenSSL::Crypto)
 target_link_libraries(server_no_tls_test OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(client_tcp_tests OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(server_tcp_test OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(client_tcp_tls_tests OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(server_tcp_tls_test OpenSSL::SSL OpenSSL::Crypto)
