Optimizations and better benchmarking

--- a/benchmark/cpp/CMakeLists.txt
+++ b/benchmark/cpp/CMakeLists.txt
@@ -3,10 +3,12 @@ project(scg_benchmarks)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -Werror -Wpedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
 
 # Include directories
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../include")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../third_party/include")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../scg/generated")
 
 # Find gperftools
 find_library(PROFILER_LIB profiler)
@@ -16,7 +18,11 @@ if(NOT PROFILER_LIB)
 endif()
 
 add_executable(serialize_bench serialize_bench.cpp)
+add_executable(message_bench message_bench.cpp)
+add_executable(varint_bench varint_bench.cpp)
 
 if(PROFILER_LIB)
     target_link_libraries(serialize_bench ${PROFILER_LIB})
+    target_link_libraries(message_bench ${PROFILER_LIB})
+    target_link_libraries(varint_bench ${PROFILER_LIB})
 endif()
