--- a/benchmark/cpp/CMakeLists.txt
+++ b/benchmark/cpp/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 project(scg_benchmarks)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -Werror -Wpedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -Werror -Wpedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
 
 # Include directories
@@ -14,7 +15,7 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../scg/generated")
 find_library(PROFILER_LIB profiler)
 
 if(NOT PROFILER_LIB)
-    message(WARNING "gperftools profiler library not found. Profiling will not work.")
+	message(WARNING "gperftools profiler library not found. Profiling will not work.")
 endif()
 
 add_executable(serialize_bench serialize_bench.cpp)
@@ -22,7 +23,7 @@ add_executable(message_bench message_bench.cpp)
 add_executable(varint_bench varint_bench.cpp)
 
 if(PROFILER_LIB)
-    target_link_libraries(serialize_bench ${PROFILER_LIB})
-    target_link_libraries(message_bench ${PROFILER_LIB})
-    target_link_libraries(varint_bench ${PROFILER_LIB})
+	target_link_libraries(serialize_bench ${PROFILER_LIB})
+	target_link_libraries(message_bench ${PROFILER_LIB})
+	target_link_libraries(varint_bench ${PROFILER_LIB})
 endif()
