Simplify logging. Remove old files

--- a/benchmark/cpp/CMakeLists.txt
+++ b/benchmark/cpp/CMakeLists.txt
@@ -21,9 +21,16 @@ endif()
 add_executable(serialize_bench serialize_bench.cpp)
 add_executable(message_bench message_bench.cpp)
 add_executable(varint_bench varint_bench.cpp)
+add_executable(rpc_bench rpc_bench.cpp)
+
+# Find pthread for RPC benchmark
+find_package(Threads REQUIRED)
 
 if(PROFILER_LIB)
 	target_link_libraries(serialize_bench ${PROFILER_LIB})
 	target_link_libraries(message_bench ${PROFILER_LIB})
 	target_link_libraries(varint_bench ${PROFILER_LIB})
+	target_link_libraries(rpc_bench ${PROFILER_LIB} Threads::Threads)
+else()
+	target_link_libraries(rpc_bench Threads::Threads)
 endif()
